# dwhbi

./: .gitignore  PLAN_OBSIDIAN_VITEPRESS_RAG.md  README.md  create-coda-table.js  deno.json  nx.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_python.sh  tsconfig.base.json
.claude/: settings.local.json
.github/workflows/: README.md  ci.yml  dbt-run.yml  deploy-docs.yml  embedding.yml  refresh-tanita-token.yml  sync-airtable.yml  sync-all.yml  sync-daily.yml  sync-fitbit.yml  sync-gcalendar.yml  sync-github-contents.yml  sync-google-calendar.yml  sync-notion.yml  sync-tanita.yml  sync-ticktick.yml  sync-toggl-report.yml  sync-toggl.yml  sync-trello.yml  sync-zaim.yml
admin/: package.json
admin/src/: proxy.ts
console/: package-lock.json  package.json
docs/: DESIGN.md  DWH_MIGRATION_PHASE1.md  ROADMAP.md
docs/Detailed_Design/: fitbit.md  trello.md  zaim.md
docs/architecture/: dwh_layers.md  overview.md  security.md
docs/data_sources/: airtable.md  gcalendar.md  tanita.md  ticktick.md  toggl.md  (+1 more)
documentation/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  project.json
pipelines/: README.md
scripts/: check-gcal-events.js  check_ref_tables.py  copy_ref_to_airtable.py  debug_ticktick_credentials.py  init_airtable.py  init_gcalendar_oauth.py  init_ticktick_oauth.py  init_trello_credentials.py  migrate_credentials_to_vault.py  run_dbt.py  setup_dbt_env.py  sync_airtable_to_supabase.py
src/: sync_all.ts  sync_daily.ts
supabase/: config.toml
test/: README.md  run_tests.ts  test_toggl_fetch_metadata.ts  test_toggl_fetch_time_entries.ts  test_toggl_sync_daily.ts  test_zaim_api.ts  test_zaim_oauth.ts  test_zaim_sync_all.ts  test_zaim_sync_daily.ts  test_zaim_sync_masters.ts  test_zaim_sync_transactions.ts
tests/: __init__.py  project.json
transform/: .user.yml  README.md  dbt_project.yml  package-lock.yml  packages.yml
(+552 files in other folders)
